# ndc_spin

./: Cargo.toml  render.http  runtime-config.toml  spin.toml
hello/: Cargo.toml
hello/src/: lib.rs
render/: Cargo.toml
render/src/: lib.rs
templates/invoice/: invoice.typ  sample.json  template.typ
templates/package/: file.typ  sample.json  template.typ
templates/test/: schema.json  template.typ
test/: Cargo.toml
test/src/: lib.rs
