[package]
name = "render"
authors = ["Niklas Eicker <git@nikl.me>"]
description = "Render a template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
typst-pdf = "0.11.1"

typst = "0.11.1"

templating = {path = "../../pdf_templating/templating"}
templating_files = {path = "../../pdf_templating/templating_files", features = ["wasi"]}
serde_json = "1.0.117"
