[package]
name = "test"
authors = ["Niklas Eicker"]
description = "NDC Spin test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = {workspace = true}
spin-sdk = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
